@startuml cart-domain.puml
skinparam classAttributeIconSize 0

package "domain.cart" {

    class Cart {
        - id : Long
        - user : User
        - items : List<CartItem>
        - updatedAt : LocalDateTime
    }

    class CartItem {
        - id : Long
        - cart : Cart
        - product : Product
        - quantity : Integer
        - priceSnapshot : BigDecimal
        --
        + hasPriceDivergence() : boolean
    }

    class AddItemRequest <<record>> {
        + productId : Long
        + quantity : Integer
    }

    class CartResponse <<record>> {
        + id : Long
        + items : List<CartItemResponse>
        + total : BigDecimal
        --
        + {static} from(Cart) : CartResponse
    }

    class CartItemResponse <<record>> {
        + id : Long
        + productId : Long
        + productName : String
        + quantity : Integer
        + priceSnapshot : BigDecimal
        + currentPrice : BigDecimal
        + hasDivergence : boolean
    }

    class CartService {
        - cartRepository : CartRepository
        - productRepository : ProductRepository
        --
        + getOrCreateCart(User) : CartResponse
        + addItem(User, AddItemRequest) : CartResponse
        + updateItem(User, Long, Integer) : CartResponse
        + removeItem(User, Long) : CartResponse
        + clearCart(User) : void
    }

    interface CartRepository {
        + findByUser(User) : Optional<Cart>
    }

    interface CartItemRepository {
        + findByCartAndProduct(Cart, Product) : Optional<CartItem>
    }

    class CartController {
        - cartService : CartService
        --
        + getCart(Authentication) : ResponseEntity
        + addItem(AddItemRequest, Authentication) : ResponseEntity
        + updateItem(Long, Integer, Authentication) : ResponseEntity
        + removeItem(Long, Authentication) : ResponseEntity
        + clearCart(Authentication) : ResponseEntity
    }
}

Cart "1" *-- "many" CartItem : contém >
CartItem --> "product" Product
CartController --> CartService
CartService --> CartRepository
CartService --> CartItemRepository

@enduml